# wecom-multi

./: .env.example  .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CROSS_PLATFORM.md  Cargo.toml  GUI_GUIDE.md  GUI_IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE_CHANGE_NOTICE.md  MACOS_GUIDE.md  MACOS_INSTALL_GUIDE.md  MACOS_QUICKSTART.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_SIMPLE.md  README_WINDOWS.md  RELEASE_V0.3.0_SUMMARY.md  WINDOWS_BUILD.md  WINDOWS_IMPLEMENTATION_SUMMARY.md  build.bat  check-windows.sh  index.html  package-lock.json  package.json  tauri.conf.json
.github/workflows/: build-windows.yml  build.yml  release.yml  test.yml
docs/: BUILD_RELEASE.md  DEBUG.md  DEVELOPMENT.md  ICON_GUIDE.md  INSTANCE_ISOLATION.md  PATH_DETECTION.md  USER_GUIDE.md  USER_INSTALL.md  Windows测试指南.md  Windows版本开发方案.md  dev.md  macOS多开闪退问题研究.md  如何使用GitHub-Actions编译.md  跨平台多开方案深度研究报告.md
scripts/: README.md  generate_temp_icon.py  wecom-multi-open-simple.ps1  wecom_multi_open.ps1
src/: App.tsx  gui.rs  lib.rs  main.rs  styles.css  wecom_manager.rs  windows_sandbox.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lib/: mod.rs  mutex.rs  process.rs
src/icons/IconKitchen-Output/macos/: AppIcon.icns
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/.github/workflows/: build.yml
ui/src/: App.css  App.tsx  index.css
ui/src/components/ui/: button.tsx  card.tsx  tabs.tsx
ui/src/hooks/: useTheme.ts
ui/src/styles/: globals.css
