[package]
name = "wecom-multi-open"
version = "0.2.0"
edition = "2021"
authors = ["open-source"]
license = "MIT"

[lib]
name = "wecom_multi_open"
path = "src/lib.rs"

[[bin]]
name = "wecom-multi-open"
path = "src/main.rs"

[[bin]]
name = "wecom-multi-open-gui"
path = "src/gui.rs"
required-features = ["gui"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GUI 依赖 (可选)
tauri = { version = "1.5", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
] }

[features]
default = []
gui = ["tauri"]
