[package]
name = "wecom-multi-open"
version = "0.3.2"
edition = "2021"
authors = ["open-source"]
license = "SEE LICENSE FILE"
license-file = "LICENSE"
default-run = "wecom-multi-open"

[lib]
name = "wecom_multi_open"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "wecom-multi-open"
path = "src/gui.rs"
required-features = ["gui"]

[[bin]]
name = "wecom-multi-open-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GUI 依赖 (可选)
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-shell = "2.3"
window-vibrancy = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
] }

[features]
default = []
gui = ["tauri"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
