[package]
name = "wecom-multi-open"
version = "0.1.0"
description = "企业微信多开工具"
authors = ["WeWork Multi-Open Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/wecom-multi-open"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["dialog-open", "shell-open"] }
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
